add swagGetSpsVarValueHomeBridgeInverse
